--- a/FirstApp/Pages/Index.razor
+++ b/FirstApp/Pages/Index.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
-
+@attribute [AllowAnonymous]
+@inject CustomAuthenticationStateProvider _authenticationStateProvider
 <PageTitle>Index</PageTitle>
 
 <h1>Hello, world!</h1>
@@ -7,3 +8,16 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+<button class="btn btn-primary" @onclick="RegularUserClicked"> Regular User Login </button>
+<button class="btn btn-secondary" @onclick="AdminUserClicked"> Admin User Login </button>
+
+@code{
+    private void RegularUserClicked(){
+        _authenticationStateProvider.RegularFakedSignIn();
+    }
+
+    private void AdminUserClicked(){
+        _authenticationStateProvider.AdminFakedSignIn();
+    }
+}
