--- a/FirstApp/Shared/MainLayout.razor
+++ b/FirstApp/Shared/MainLayout.razor
@@ -1,17 +1,27 @@
 ﻿@inherits LayoutComponentBase
+<AuthorizeView>
+   <div class="page">
+       <div class="sidebar">
+           <NavMenu />
+       </div>
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
+       <main>
+            <div class="top-row px-4">
+               <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            </div>
+
+            <article class="content px-4">
+            <Authorized>
+                <h3>
+                   Authorized
+                </h3>
+                @Body
+            </Authorized> 
+            <NotAuthorized>
+                @Body
+            </NotAuthorized>  
+            </article>
+        </main>
     </div>
+</AuthorizeView>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
