--- a/FirstApp/_Imports.razor
+++ b/FirstApp/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using FirstApp
 @using FirstApp.Shared
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
+
